--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -102,9 +102,9 @@ nav:
         - Create API Revisions: design/create-api/create-api-revisions.md
         - Add Custom Properties to APIs: design/create-api/adding-custom-properties-to-apis.md
         - Change the Thumbnail of an API: design/create-api/change-api-thumbnail.md
-        - Create Prototype APIs: 
+        - Create Prototype APIs:
             - Overview: design/prototype-api/overview.md
-            - Mock Implementation: 
+            - Mock Implementation:
                 - With API Gateway: design/prototype-api/create-mocked-js-api.md
             - Existing Backend Implementation as a Prototype API: design/prototype-api/backend-url-prototype-api.md
         - Create API Products:
@@ -346,15 +346,24 @@ nav:
                 # - PII Safety: ai-gateway/ai-guardrails/safety-categories/pii-safety.md
     - Governance:
         - Overview: governance/overview.md
-        - Concept: governance/governance-concept.md
-        - Quick Start Guide: governance/quick-start-guide.md
+        - Concepts: governance/governance-concept.md
+    #   - Quick Start Guide: governance/quick-start-guide.md
         - How to Use:
-            - Admin Capabilities: governance/api-governance-admin-capabilities.md
+            - Administrative Capabilities: governance/api-governance-admin-capabilities.md
             - API Creator/Publisher Capabilities: governance/api-governance-api-creator-capabilities.md
-        - Dashboards: governance/governance-dashboards.md
-    - Analytics:
+        - CI/CD-Driven Governance: governance/api-governance-cicd.md
+        - References:
+            - Rule Validator: governance/rule-validator/rule-validator.md
+            - Ruleset Catalog:
+                  - WSO2 API Management Guidelines: reference/governance/wso2-api-management-guidelines.md
+                  - WSO2 REST API Design Guidelines: reference/governance/wso2-rest-api-design-guidelines.md
+                  - OWASP Top 10: reference/governance/owasp-top-10.md
+                  - WSO2 API Security Guidelines: reference/governance/wso2-api-security-guidelines.md
+            - API YAML Representation: reference/governance/api-yaml-representation.md
+            - API Documentation YAML Representation: reference/governance/api-doc-yaml-representation.md
+    - Monitoring:
         - API Analytics:
-            - Choreo Based Analytics: 
+            - Choreo Based Analytics:
                 - Architecture: api-analytics/choreo-analytics/api-analytics-architecture.md
                 - Getting Started Guide: api-analytics/choreo-analytics/getting-started-guide.md
                 - Role-based Access Control : api-analytics/choreo-analytics/role-based-access-control.md
@@ -627,7 +636,6 @@ nav:
                         - Distributed Deployment (Recommended): install-and-setup/setup/kubernetes-deployment/kubernetes/am-pattern-3-acp-tm-gw.md
                         - Distributed Deployment with Key Manager Separation: install-and-setup/setup/kubernetes-deployment/kubernetes/am-pattern-4-acp-tm-gw-km.md
                         - Simple Scalable Deployment with Key Manager Separation: install-and-setup/setup/kubernetes-deployment/kubernetes/am-pattern-5-all-in-one-gw-km.md
-                        - Configure IS as Key Manager: install-and-setup/setup/kubernetes-deployment/kubernetes/am-pattern-6-all-in-one-is-as-km.md
                 - API-M on Openshift: install-and-setup/setup/kubernetes-deployment/openshift/openshift-deployment-overview.md
             - Deployment Best Practices:
                 - Deployment Checklist: install-and-setup/setup/deployment-best-practices/production-deployment-guidelines.md
