--- a/en/tools/config-catalog-generator/data/configs.json
+++ b/en/tools/config-catalog-generator/data/configs.json
@@ -1002,7 +1002,7 @@
                             "required": false,
                             "default": "TRUE",
                             "possible": "",
-                            "description": "Configuration used to disable the revoke token cleanup functionality. If set to false, revoked tokens will not be cleaned up."
+                            "description": "Configuration used to disable the revoke token cleanup functionality. If set to false, revoked tokens will not be cleaned up. Note that this configuration is supported from update level 426 onwards. If you are using an earlier version, this configuration will not be available."
                         }
                     ]
                 }
