--- a/en/tools/config-catalog-generator/data/configs.json
+++ b/en/tools/config-catalog-generator/data/configs.json
@@ -5398,7 +5398,7 @@
                 {
                     "name": "authentication_policy",
                     "required": false,
-                    "description": "Defines the authentication policy settings for WSO2 API Manager, including options for enabling legacy authentication methods.",
+                    "description": "Defines the authentication policy settings for WSO2 API Manager, including options for enabling legacy authentication methods. Note that this configuration is supported from update level 344 onwards.",
                     "params": [
                         {
                             "name": "enable_legacy_authentication",
@@ -5406,7 +5406,7 @@
                             "required": false,
                             "default": "FALSE",
                             "possible": "",
-                            "description": "When enabled, allows the system to authenticate users using the legacy method in the Basic Authenticator."
+                            "description": "When enabled, allows the system to authenticate users using the legacy method in the Basic Authenticator. Note that this configuration is supported from update level 344 onwards. If you are using an earlier version, this configuration will not be available."
                         }
                     ]
                 }
