Add enable_revoke_token_cleanup configuration to config-catalog

--- a/en/tools/config-catalog-generator/data/apim.oauth_config.toml
+++ b/en/tools/config-catalog-generator/data/apim.oauth_config.toml
@@ -4,3 +4,4 @@ auth_header = "Authorization"
 revoke_endpoint = "https://localhost:${mgt.transport.https.port}/oauth2/revoke"
 enable_token_encryption = false
 enable_token_hashing = false
+enable_revoke_token_cleanup = true
