--- a/en/tools/config-catalog-generator/data/configs.json
+++ b/en/tools/config-catalog-generator/data/configs.json
@@ -1156,6 +1156,14 @@
                             "default": "[\"^device_.*,openid\"]",
                             "possible": "",
                             "description": "List of allowlisted scopes. Take desc from Key Concepts page."
+                        },
+                        {
+                            "name": "enable_revoke_token_cleanup",
+                            "type": "string",
+                            "required": false,
+                            "default": "TRUE",
+                            "possible": "",
+                            "description": "Configuration used to disable the revoke token cleanup functionality. If set to false, revoked tokens will not be cleaned up. Note that this configuration is supported from update level 23 onwards."
                         }
                     ]
                 }
