--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -1314,6 +1314,7 @@ nav:
             - Configure ForgeRock as a Key Manager: administer/key-managers/configure-forgerock-connector.md
             - Configure a Custom Key Manager: administer/key-managers/configure-custom-connector.md
             - Configure the Global Key Manager: administer/key-managers/configure-global-key-manager.md
+            - Application Scopes: administer/key-managers/application-scopes.md
         - Advanced Configurations: administer/advanced-configurations.md
         - Manage Role based access control for the Admin portal: administer/role-based-access-control.md
     - Install and Setup:
