--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -339,17 +339,21 @@ nav:
             - Other Analytics Solutions: 
                 - ELK Based Analytics Installation Guide: api-analytics/on-prem/elk-installation-guide.md
                 - Datadog Analytics Installation Guide : api-analytics/on-prem/datadog-installation-guide.md
+                - OpenSearch Analytics Installation Guide: api-analytics/on-prem/opensearch-installation-guide.md
             - Publish Analytics Events to External Systems: api-analytics/samples/publishing-analytics-events-to-external-systems.md
             - Publish Custom Analytics Events Data: api-analytics/samples/publishing-custom-analytics-data.md
     - Observe:
         - Observability Overview: observe/observe-overview.md
         - API Manager:
             - Logs:
+                - Configure Logs: observe/api-manager/configuring-logging.md
                 - Correlation Logs: observe/api-manager/monitoring-correlation-logs.md
                 - HTTP Access Logs: observe/api-manager/monitoring-http-access-logs.md
                 - Audit Logs: observe/api-manager/monitoring-audit-logs.md
                 - API Logs: observe/api-manager/monitoring-api-logs.md
                 - Websocket Logs : observe/api-manager/monitoring-websocket-logs.md
+                - Third Party Observability Solutions:
+                    - OpenSearch: observe/api-manager/monitoring-with-opensearch.md
             - Traces:
                 - OpenTracing: observe/api-manager/traces/monitoring-with-opentracing.md
                 - OpenTelemetry: observe/api-manager/traces/monitoring-with-opentelemetry.md
@@ -469,7 +473,7 @@ nav:
             - Manage Tenants: administer/multitenancy/managing-tenants.md
             - Configure the Tenant Loading Policy: administer/multitenancy/configuring-the-tenant-loading-policy.md
         - Monitoring API Manager:
-            - Configure Logs: administer/logging-and-monitoring/logging/configuring-logging.md
+           # - Configure Logs: administer/logging-and-monitoring/logging/configuring-logging.md
             # Remove After added TCP dump - TCP-Based Messages: administer/logging-and-monitoring/monitoring/monitoring-tcp-based-messages.md
             - Server Health: administer/logging-and-monitoring/monitoring/monitoring-server-health.md
         - Multiple Gateways:
@@ -1107,6 +1111,7 @@ plugins:
               'design/prototype-api/create-a-prototype-api.md': 'https://apim.docs.wso2.com/en/4.4.0/design/prototype-api/overview/'
               'deploy-and-publish/deploy-on-gateway/api-gateway/message-tracing.md': 'https://apim.docs.wso2.com/en/4.4.0/get-started/about-this-release/#removed-features-and-functionalities'
               'develop/customizations/customizing-the-developer-portal/customize-api-listing/categorizing-and-grouping-apis/api-category-based-grouping.md': 'https://apim.docs.wso2.com/en/4.4.0/reference/customize-product/customizations/customizing-the-developer-portal/customize-api-listing/api-category-based-grouping/'
+              'administer/logging-and-monitoring/logging/configuring-logging.md': 'https://apim.docs.wso2.com/en/4.4.0/observe/api-manager/configuring-logging/'
     # Extra
 extra_css:
     - assets/lib/highlightjs/default.min.css
