Update missing content in product apis

--- a/en/docs/reference/product-apis/devportal-apis/devportal-v3/devportal-v3.yaml
+++ b/en/docs/reference/product-apis/devportal-apis/devportal-v3/devportal-v3.yaml
@@ -6496,6 +6496,8 @@ components:
       in: query
       description: |
         Application Group Id
+        
+        Please note that filtering by groupId is currently not supported.
       schema:
         type: string
     subscriptionId:
