--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -877,6 +877,7 @@ nav:
                 - OpenTelemetry: observe/api-manager/traces/monitoring-with-opentelemetry.md
             - Metrics:
                 - JMX-Based Monitoring: observe/api-manager/metrics/jmx-based-monitoring.md
+                - Prometheus for Monitoring: observe/api-manager/metrics/prometheus-for-monitoring.md
         - Micro Integrator Profile:
             - Cloud Native Observability:
                 - Overview: observe/micro-integrator/cloud-native-observability-overview.md
