Add guardrail integrations
- PII Masking with Regex
- Semantic Prompt Guardrail
- Azure Content Safety Content Moderation
- AWS Bedrock Guardrail

--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -345,6 +345,10 @@ nav:
             - Sentence Count Guardrail: ai-gateway/ai-guardrails/sentence-count-guardrail.md
             - URL Guardrail: ai-gateway/ai-guardrails/url-guardrail.md
             - Word Count Guardrail: ai-gateway/ai-guardrails/word-count-guardrail.md
+            - Semantic Prompt Guardrail: ai-gateway/ai-guardrails/semantic-prompt-guardrail.md
+            - PII Masking with Regex: ai-gateway/ai-guardrails/regex-pii-masking.md
+            - Azure Content Safety: ai-gateway/ai-guardrails/azure-content-safety.md
+            - AWS Bedrock Guardrail: ai-gateway/ai-guardrails/aws-bedrock-guardrail.md
             - Guardrail Error Response: ai-gateway/ai-guardrails/guardrail-error-response.md
     - Governance:
         - Overview: governance/overview.md
