--- a/.github/ISSUE_TEMPLATE/question_form.yml
+++ b/.github/ISSUE_TEMPLATE/question_form.yml
@@ -1,5 +1,5 @@
 name: "🙋 Ask a Question"
-description: Ask a question about the product suite.
+description: Ask a question about the documentation.
 labels: ["Type/Question"]
 body:
   - type: textarea
@@ -9,42 +9,24 @@ body:
       description: Describe the question.
     validations:
       required: true
-  - type: dropdown
-    id: component
-    attributes:
-      label: Affected Component
-      description: Select affected component.
-      options:
-        - Analytics
-        - APICTL
-        - APIM
-    validations:
-      required: true
   - type: input
     id: version
     attributes:
       label: Version
-      description: Enter component version.
+      description: If applicable, provide the version of the product documentation.
     validations:
-      required: true
-  - type: textarea
-    id: environment
-    attributes:
-      label: Environment Details (with versions)
-      description: Mention the environment details (OS, Client, etc.) that the product is running on.
-    validations:
-      required: true
+      required: false
   - type: textarea
     id: related
     attributes:
       label: Related Issues
-      description: Mention if any related issues.
+      description: Mention if there are any related issues.
     validations:
       required: false
   - type: input
     id: suggested
     attributes:
       label: Suggested Labels
-      description: Mention if any suggested labels.
+      description: Mention if there are any suggested labels.
     validations:
       required: false
