--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -22,7 +22,7 @@ body:
     id: version
     attributes:
       label: Version(s)
-      description: Provide all the applicable documentation versions that this bug could be encountered
+      description: List all relevant documentation versions in which this issue may be encountered.
       placeholder: 4.5.0, 4.4.0, 4.3.0
     validations:
       required: true
