--- a/.github/ISSUE_TEMPLATE/improvement.yml
+++ b/.github/ISSUE_TEMPLATE/improvement.yml
@@ -13,7 +13,7 @@ body:
     id: suggestion
     attributes:
       label: Suggested Improvement
-      description: Describe the improvement you suggest.
+      description: Describe the improvement you would suggest.
     validations:
       required: true
   - type: input
