--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -738,6 +738,7 @@ nav:
                         - Configure a Read-Write Active Directory User Store: administer/managing-users-and-roles/managing-user-stores/configure-primary-user-store/configuring-a-read-write-active-directory-user-store.md
                 - SSO:
                     - Configure Identity Server As External IDP with OIDC: install-and-setup/setup/sso/configuring-identity-server-as-external-idp-using-oidc.md
+                    - Configure Identity Server 7.x As External IDP with OIDC: install-and-setup/setup/sso/configuring-identity-server-7.x-as-external-idp-using-oidc.md
                     - Configure Identity Server As External IDP with SAML: install-and-setup/setup/sso/configuring-identity-server-as-external-idp-using-saml.md
                     - OKTA As An External IDP With OIDC: install-and-setup/setup/sso/okta-as-an-external-idp-using-oidc.md
                     - OKTA As An External IDP With SAML: install-and-setup/setup/sso/okta-as-an-external-idp-using-saml.md
