Update resources for apictl v4.2.7 release

--- a/en/docs/reference/product-apis/publisher-apis/publisher-v4/publisher-v4.yaml
+++ b/en/docs/reference/product-apis/publisher-apis/publisher-v4/publisher-v4.yaml
@@ -3987,6 +3987,14 @@ paths:
           schema:
             type: boolean
             default: false
+        - name: preserveCredentials
+          in: query
+          description: |
+            Preserve endpoint configuration credentials and secret parameters
+          required: false
+          schema:
+            type: boolean
+            default: false
       responses:
         200:
           description: |
