--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -344,8 +344,8 @@ nav:
         - Create from an OpenAPI Definition: mcp/create-from-openapi.md
         - Create from an Existing API: mcp/create-from-api.md
         - Proxy an Existing MCP Server: mcp/create-from-mcp-server.md
-        - Update and Deploy an MCP Server: mcp/update-and-deploy-mcp-server.md
-        - Subscribe to an MCP Server: mcp/subscribe-to-a-mcp-server.md
+        - Update and Deploy a MCP Server: mcp/update-and-deploy-mcp-server.md
+        - Subscribe to a MCP Server: mcp/subscribe-to-a-mcp-server.md
         - Test with the MCP Playground: mcp/invoke-a-mcp-server-using-playground.md
     - Analytics:
         - API Analytics:
