adding kong gw discovery feature docs

--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -265,6 +265,8 @@ nav:
               - AWS:
                 - Deploy on AWS API Gateway: deploy-and-publish/federated-gateways/aws/deploy-on-aws-api-gateway.md
                 - Discover APIs on AWS API Gateway: deploy-and-publish/federated-gateways/aws/discover-apis-on-aws-api-gateway.md
+              - Kong:
+                - Discover APIs on Kong Gateway: deploy-and-publish/federated-gateways/kong/discover-apis-on-kong-gateway.md
               - Configure a Custom Gateway Agent: deploy-and-publish/deploy-on-gateway/federated-gateways/configure-custom-gateway-agent.md
     - Consume APIs:
         - Consume APIs - Overview: consume/consume-api-overview.md
