--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -1191,8 +1191,7 @@ extra:
             version: 1.2.0-1
             git_tag: v1.2.0.1
     site_version: 4.6.0
-    base_path: http://localhost:8000/en/4.6.0
 #    base_path: http://localhost:8000/en/4.6.0
-    base_path: https://apim.docs.wso2.com/en/latest
+    base_path: https://apim.docs.wso2.com/en/4.6.0
     envoy_path: https://www.envoyproxy.io/docs/envoy/v1.24.1
 
